# fairclaim

./: .dockerignore  .envexample  .gcloudignore  .gitignore  AGENTS.md  Dockerfile  EVALS.md  README.md  pyproject.toml
deploy/: cloudrun.sh
evals/: __init__.py  harness.py  human_baseline.py  judge.py  run.py
evals/datasets/: e2e_personas.json  email_cases.json  injection_corpus.json  intake_personas.json  remedy_cases.json  tc_clauses.json
evals/suites/: __init__.py  e2e.py  email_drafts.py  intake.py  remedies.py  security.py  tc_analysis.py
specs/: AGENT_PIPELINE.md  ARCHITECTURE.md  DATA_CONTRACTS.md  DEPLOYMENT.md  FRONTEND_UX.md  IMPLEMENTATION_PLAN.md  LEGAL_DOMAIN.md  PROJECT_BRIEF.md  SECURITY_AND_GUARDRAILS.md  TEST_AND_EVAL_PLAN.md
src/fairclaim/: __init__.py
src/fairclaim/backend/: dates.py  llm_config.py  main.py  mcp_client.py  schemas.py  telemetry.py
src/fairclaim/backend/agents/: email_agent.py  orchestrator.py  remedies.py  tc_analysis.py
src/fairclaim/backend/knowledge/: CRA_2015_KB.md
src/fairclaim/backend/mcp_server/: server.py
src/fairclaim/backend/scripts/: gen_frontend_types.py
src/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.css  App.tsx  api.ts  index.css  sample.ts  types.ts
tests/: test_api_ingest.py  test_contracts.py  test_email_guard.py  test_guardrails.py  test_ingest.py  test_ingest_url.py  test_injection.py  test_intake_confirmation.py  test_mcp_kb.py  test_orchestrator.py  test_remedies_agent.py  test_remedy_tier.py  test_telemetry.py
(+19 files in other folders)
